syntax = "proto3";

package dustin.cex.engine;

option java_multiple_files = true;
option java_package = "dustin.cex.engine.grpc";
option java_outer_classname = "EngineProto";

// 엔진 서비스
// Engine Service
service EngineService {
    // 주문 제출
    // Submit Order
    rpc SubmitOrder(SubmitOrderRequest) returns (SubmitOrderResponse);
    
    // 주문 취소
    // Cancel Order
    rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
}

// 주문 제출 요청
// Submit Order Request
message SubmitOrderRequest {
    // 주문 ID (DB에서 생성된 ID)
    // Order ID (generated from DB)
    int64 order_id = 1;
    
    // 사용자 ID
    // User ID
    int64 user_id = 2;
    
    // 주문 타입: "buy" 또는 "sell"
    // Order Type: "buy" or "sell"
    string order_type = 3;
    
    // 주문 방식: "limit" 또는 "market"
    // Order Side: "limit" or "market"
    string order_side = 4;
    
    // 기준 자산 (예: "SOL")
    // Base Asset (e.g., "SOL")
    string base_mint = 5;
    
    // 기준 통화 (예: "USDT")
    // Quote Currency (e.g., "USDT")
    string quote_mint = 6;
    
    // 지정가 가격 (지정가 주문만)
    // Limit Price (limit orders only)
    string price = 7;  // Decimal을 문자열로 전송
    
    // 주문 수량 (기준 자산 기준)
    // Order Amount (in base asset)
    string amount = 8;  // Decimal을 문자열로 전송
    
    // 시장가 매수 금액 (시장가 매수만)
    // Market Buy Quote Amount (market buy only)
    string quote_amount = 9;  // Decimal을 문자열로 전송, 선택적
}

// 주문 제출 응답
// Submit Order Response
message SubmitOrderResponse {
    // 성공 여부
    // Success flag
    bool success = 1;
    
    // 에러 메시지 (실패 시)
    // Error message (on failure)
    string error_message = 2;
}

// 주문 취소 요청
// Cancel Order Request
message CancelOrderRequest {
    // 주문 ID
    // Order ID
    int64 order_id = 1;
    
    // 사용자 ID
    // User ID
    int64 user_id = 2;
    
    // 거래쌍 (예: "SOL/USDT")
    // Trading Pair (e.g., "SOL/USDT")
    string trading_pair = 3;
}

// 주문 취소 응답
// Cancel Order Response
message CancelOrderResponse {
    // 성공 여부
    // Success flag
    bool success = 1;
    
    // 에러 메시지 (실패 시)
    // Error message (on failure)
    string error_message = 2;
}
